# biohacking-dashboard

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
examples/: api_usage.sh
migrations/: 001_create_metrics.sql
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs
src/handlers/: mod.rs
src/routes/: health.rs  insights.rs  metrics.rs  mod.rs
src/services/: database.rs  insights.rs  metrics.rs  mod.rs
