[package]
name = "biohacking-dashboard"
version = "0.1.0"
edition = "2021"
description = "Track health metrics with ML-powered insights. Privacy-first health tracking dashboard."
authors = ["EonHermes"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# ML/statistical analysis
statrs = "0.16"

# UUID for unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
assert-json-diff = "2"
tokio-test = "0.4"
